--- a/pc-part-picker/package.json
+++ b/pc-part-picker/package.json
@@ -9,15 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "auth0": "^4.1.0",
-    "next": "14.0.1",
+    "bcrypt": "^5.1.1",
+    "next": "14.0.2",
+    "next-auth": "^4.24.5",
     "react": "^18",
-    "react-dom": "^18",
-    "styled-components": "^6.1.1"
+    "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/node": "20.9.0",
+    "@types/react": "18.2.37",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "5.2.2"
   }
 }
