--- a/pc-part-picker/package.json
+++ b/pc-part-picker/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "next": "14.0.2",
     "next-auth": "^4.24.5",
     "react": "^18",
